# USBLERST

./: .gitignore  Cargo.toml  README.md  check_hidd  sdkconfig.defaults  test_bt_magic.rs
.github/workflows/: rust-ci.yml
crates/usb2ble-core/: Cargo.toml
crates/usb2ble-core/src/: lib.rs
crates/usb2ble-fw/: Cargo.toml
crates/usb2ble-fw/src/: app.rs  main.rs
crates/usb2ble-platform-espidf/: Cargo.toml
crates/usb2ble-platform-espidf/src/: ble_hid.rs  ble_hid_esp.rs  console_uart.rs  lib.rs  nvs_store.rs  usb_host.rs
crates/usb2ble-proto/: Cargo.toml
crates/usb2ble-proto/src/: lib.rs
docs/: CLOUD_AGENT_DEVELOPMENT.md
fixtures/replay/: README.md  xy_input.txt  xy_input_detach.txt
