[package]
name = "usb2ble-fw"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
usb2ble-core = { path = "../usb2ble-core" }
usb2ble-proto = { path = "../usb2ble-proto" }
usb2ble-platform-espidf = { path = "../usb2ble-platform-espidf" }

[lints]
workspace = true
